--- a/style.css
+++ b/style.css
@@ -7,14 +7,13 @@ body {
     background-image: linear-gradient(rgba(18, 18, 18, .5), black), url(images/donation0.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
     height: 650px;
     width: 100%;
 }
 
 .link-button {
     text-decoration: none;
-    background-color: tomato;
+    background-color: #FF5959;
     padding: 15px 20px;
     color: white;
     border-radius: 5px;
@@ -23,7 +22,7 @@ body {
 .banner-text {
     color: white;
     text-align: center;
-    padding: 150px 400px;
+    padding: 120px 400px;
 
 }
 
@@ -31,6 +30,55 @@ body {
     font-size: 50px;
 }
 
-#banner-para {
+#first-para {
     padding: 40px;
+}
+
+.donation-today {
+    text-align: center;
+    padding: 120px 0;
+}
+
+.second-head {
+    font-size: 45px;
+}
+
+#second-para {
+    padding: 0 420px;
+
+}
+
+#donation-amount {
+    display: flex;
+    justify-content: center;
+}
+
+.font-color-second {
+    color: #707070;
+}
+
+.exact-donation-amount {
+    height: 40px;
+    width: 90px;
+    margin: 15px;
+    padding: 35px 20px;
+    background-color: #fafafa;
+    font-weight: 700;
+    font-size: 30px;
+    border-radius: 5px;
+}
+
+#selected-amount {
+    background-color: #FFEEEE;
+    border: 2px solid #FF5959;
+}
+
+#other-amount {
+    text-align: center;
+    font-size: 16px;
+    border: none;
+    border-bottom: 1px solid grey;
+    width: 50%;
+    padding: 10px;
+    margin: 32px;
 }
