--- a/style.css
+++ b/style.css
@@ -34,16 +34,16 @@ body {
     padding: 40px;
 }
 
-.donation-today {
+.donation {
     text-align: center;
-    padding: 120px 0;
+    padding: 100px 0;
 }
 
-.second-head {
+.donation-heading {
     font-size: 45px;
 }
 
-#second-para {
+.donation-para {
     padding: 0 420px;
 
 }
@@ -53,7 +53,7 @@ body {
     justify-content: center;
 }
 
-.font-color-second {
+.para-font-color {
     color: #707070;
 }
 
@@ -81,4 +81,33 @@ body {
     width: 50%;
     padding: 10px;
     margin: 32px;
+}
+
+#our-donation-plan {
+    display: flex;
+    text-align: left;
+    margin: 0px 100px;
+}
+
+.three-division {
+    margin: 2%;
+    border-radius: 5px;
+    width: 33.33%;
+    padding: 50px 20px;
+}
+
+.icon {
+    height: 50px;
+}
+
+#food {
+    background-color: #edf5f6;
+}
+
+#shelter {
+    background-color: #ffeadd;
+}
+
+#education {
+    background-color: #f5f3c4;
 }
